# Handy

./: .gitignore  CMakeLists.txt  README.md
data/: similar.txt  wordList.txt
source/: LeapMotion.h  SignListener.cpp  SignListener.h  main.cpp  tutorwidget.cpp  tutorwidget.h
